syntax = "proto3";

package app.krail.kgtfs.proto;

message NswStop {

  /** The stop ID is a unique identifier for the stop.   */
  string stopId = 1;

  // The stop name is the name of the stop.
  string stopName = 2;

  double lat = 3;
  double lon = 4;

  // The product class is a list of transport modes that the stop is associated with.
  repeated int32 productClass = 5;

  // Indicates if this stop is a parent stop.
  // Default (true or not present): This is a parent stop
  // Explicitly false: This is a child stop (e.g., specific platform/stand)
  // Proto3 default for bool is false, but in our logic:
  // - Missing field = true (parent stop)
  // - Explicitly set to false = child stop
  bool isParent = 6;
}

message NswStopList {
  repeated NswStop nswStops = 1;
}
